# civilTools

./: .gitignore
earthWork/: gridMethodAlgorithm.py  pyproject.toml  readme  result.csv  開發紀錄
earthWork/sourceData/: A區點位.csv  B區點位.csv  C區點位.csv  elevationData.txt  elevationData.xls
earthWork/validateData/: A區檢核.xls  C區檢核.xls  四點法結果.xls
precipitationStation/: _extractObjectValue.js  exportPrecpStationData.js  package-lock.json  package.json  precipitationDataCrawler.js
precipitationStation/params/: precpStationsData.js  precpStationsList.js
precipitationStation/postman/: 687DDA704255161BD3C8B5BBCFD4F0339C7F5464_雨量站爬蟲.postman_collection.json
precipitationStation/sourceData/: 1_雨量站csv範本.csv  2_request回應結果.txt  3_csv實際所需屬性.txt  4_response.txt
precipitationStation/test/: test.js
quantityCalculator/: readme.md  數量計算表改善說明.pptx
quantityCalculator/Case1/: config.json  quantityCalculator_Case1.xlsm
quantityCalculator/Case1/vba-files/Class/: ThisWorkbook.cls  工作表2.cls  工作表4.cls  工作表5.cls
quantityCalculator/Case1/vba-files/Module/: calMaterialsQuantity.bas  commonTools.bas  getMaterials.bas
quantityCalculator/Case2/: config.json  quantityCalculator_Case2.xlsm
quantityCalculator/Case2/vba-files/Class/: 工作表10.cls  工作表11.cls  工作表3.cls  工作表4.cls  工作表5.cls  工作表56.cls  工作表6.cls  工作表7.cls  工作表8.cls  工作表9.cls
quantityCalculator/Case2/vba-files/Module/: calMaterialsQuantity.bas  calMaterialsQuantityByElement.bas  commonTools.bas  getMaterials.bas  makeElementsMaterialsByWork.bas  makeMaterialsList.bas  unitTest.bas
