[tool.poetry]
name = "earthwork"
version = "0.1.0"
description = "這是土方方格法檢核工具"
authors = ["KTing"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
openpyxl = "^3.0.10"
filetype = "^1.2.0"
numpy = "^1.24.1"
scipy = "1.10.0"
matplotlib = "^3.6.3"
packaging = "^23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
